# APC-524_PeridynamicModel_CCM

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
Fortran/: Makefile  block_under_tension.f90  longitudinal_bar_vibration1.f90
_build/: .buildinfo  genindex.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree
_build/.doctrees/.pytest_cache/: README.doctree
_build/.doctrees/docs/: index.doctree  modules.doctree
_build/.doctrees/documentation/: index.doctree  modules.doctree
_build/.pytest_cache/: README.html
_build/_modules/: index.html
_build/_modules/src/: Algorithms.html  mesh_file.html
_build/_sources/: index.rst.txt  src.rst.txt
_build/docs/: index.html  modules.html
_build/doctrees/: environment.pickle  index.doctree
_build/documentation/: index.html  modules.html
_build/html/: README.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
_build/html/_sources/: README.md.txt
documentation/: conf.py
documentation/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js  src.html
mpi/: block_under_tension_mpi.f90  job.slurm
report/: APC524_ParameshwaranPasupathy_slides.pptx
src/: Algorithms.py  generate_grid.py  global_variables.py  main.py  mesh_file.py  postprocess.py
tests/: expected_alflag.npy  expected_numfam.npy  expected_pointfam.npy  expected_u.npy  expected_u_updated.npy  test_generate_grid.py  test_mesh_file.py  test_plot4d.py
(+4 files in other folders)
